--- a/Skeleton/Skeleton/MusicSalesTests.csproj
+++ b/Skeleton/Skeleton/MusicSalesTests.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MusicSalesTest.cs" />
+    <Compile Include="TrackPricerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
